# protector

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml
agent/: Cargo.toml  Dockerfile  README.md
agent/common/: Cargo.toml
agent/common/src/: lib.rs
agent/protector-agent/: Cargo.toml  build.rs
agent/protector-agent-ebpf/: Cargo.toml  rust-toolchain.toml
agent/protector-agent-ebpf/.cargo/: config.toml
agent/protector-agent-ebpf/src/: main.rs  vmlinux.rs
agent/protector-agent/src/: behavior.rs  coalesce.rs  linkage.rs  main.rs  observer.rs  pod.rs  reporter.rs
agent/protector-agent/src/coalesce/: tests.rs
agent/protector-agent/src/observer/ebpf/: observer_ebpf_tests.rs
behavior/: Cargo.toml
behavior/src/: elf.rs  lib.rs
behavior/src/elf/: tests.rs
engine/: Cargo.toml
engine/examples/: dashboard_preview.rs
engine/src/: main.rs  metrics.rs  policy.rs  server.rs  telemetry.rs
engine/src/engine/: actuator.rs  adj_gate.rs  adj_gate_tests.rs  adj_pass.rs  adjudicate.rs  churn_diag.rs  dashboard.rs  delta.rs  exploit_intel.rs  graph.rs  hypothesis.rs  journal.rs  journal_tests.rs  metrics.rs  mod.rs  model.rs  notify.rs  objective.rs  observe.rs  policy_log.rs  proof.rs  provenance_sweep.rs  provenance_sweep_tests.rs  response.rs  run_loop.rs  runtime.rs  signing_baseline_strength.rs  signing_drift.rs  signing_drift_tests.rs  signing_rekor.rs  signing_rekor_tests.rs  signing_sweep.rs  tests.rs  trivy.rs
engine/src/engine/adapter/: egress.rs  enrich.rs  escape.rs  exposure.rs  linkerd.rs  network.rs  secret_mount.rs
engine/src/engine/dashboard/: action_view_tests.rs  admission_tests.rs  alerts_tests.rs  api_json_tests.rs  mod.rs  model.rs  page.rs  page_tests.rs  path_view_tests.rs  preact_flag_tests.rs  preact_flags.rs  readiness_render_tests.rs  recency.rs  security_headers.rs  tests.rs
engine/src/engine/dashboard/auth/: claims.rs  enforce.rs  enforce_tests.rs  jwks.rs  mod.rs  test_support.rs  tests.rs  tier_grants_tests.rs
engine/src/engine/dashboard/components/: action_view.rs  activity_view.rs  admission.rs  admission_view.rs  alerts_view.rs  banner.rs  breach_queue.rs  chips.rs  detail.rs  endpoints.rs  evidence.rs  finding_detail.rs  finding_row.rs  findings_view.rs  graph.rs  hops.rs  internals.rs  judgements.rs  mod.rs  nav.rs  policy.rs  readiness_view.rs  report.rs  status_line.rs  status_strip.rs  trust_view.rs
engine/src/engine/dashboard/legacy/: base.rs  cards.rs  mermaid.rs  mod.rs  model.rs  panels.rs  readiness.rs  report.rs  rows.rs
engine/src/engine/dashboard/model/: evidence.rs  mod.rs
engine/src/engine/dashboard/tests/: escaping.rs  group_1.rs  group_2.rs  group_3.rs  group_4.rs  guards.rs  mod.rs  recency.rs  render.rs
engine/src/engine/dashboard/view_model/: access.rs  action.rs  activity.rs  admission.rs  alerts.rs  attack_vectors.rs  bake.rs  entry.rs  evidence.rs  findings.rs  hops.rs  internals.rs  judgements.rs  mod.rs  policy.rs  posture.rs  props.rs  readiness.rs  readiness_data.rs  report.rs  report_data.rs  reversions.rs  signing_inventory.rs  status.rs  strip.rs  trust.rs
engine/src/engine/graph/: attack.rs  delta.rs  mod.rs  tests.rs
engine/src/engine/mcp/: access_audit.rs  audit.rs  dispatch.rs  mod.rs  render.rs  server.rs  state.rs  tests.rs  tiering.rs  tools.rs  transport.rs
engine/src/engine/mcp/access_audit/: tests.rs
engine/src/engine/model/: cache.rs
engine/src/engine/observe/: advisory.rs  alarm_class.rs  asn.rs  asn_tests.rs  audit.rs  elf.rs  epss.rs  exec_class.rs  exploit_intel.rs  feed_reload.rs  feed_reload_tests.rs  health.rs  ingest_guard.rs  ip_index.rs  mod.rs  peer_class.rs  runtime.rs  trivy.rs  trivy_config.rs  trivy_rbac.rs  trivy_secret.rs
engine/src/engine/reason/: adjudicate.rs  backoff.rs  hypothesis.rs  mod.rs  objective.rs  proof.rs
engine/src/engine/redact/: mod.rs  outcome.rs  sanitize.rs  scrub.rs  tests.rs
engine/src/engine/respond/: actuator.rs  mod.rs  tests.rs
engine/src/engine/run_loop/: tests.rs
engine/src/engine/state/: agent_liveness.rs  evidence.rs  findings.rs  judgement.rs  mod.rs  parity.rs  parity_tests.rs  readiness.rs  readiness_tests.rs  recency.rs  report.rs  reversion.rs  signing_baseline.rs  signing_baseline_tests.rs  verdict_store.rs  verdict_store_tests.rs
engine/src/engine/supply_chain/: mod.rs  provenance_drift.rs  provenance_drift_tests.rs  provenance_sweep.rs  signing_baseline_strength.rs  signing_drift.rs  signing_drift_tests.rs  signing_rekor.rs  signing_rekor_tests.rs  signing_sweep.rs  signing_trust.rs  signing_trust_tests.rs
engine/src/policies/: mesh.rs  signature.rs
engine/src/policies/signature/: auth.rs  auth_tests.rs  classify_continuity_tests.rs  continuity.rs  continuity_tests.rs  cosign.rs  cosign_tests.rs  mod.rs  posture.rs  posture_tests.rs  provenance.rs  provenance_tests.rs  rekor.rs  rekor_tests.rs  tests.rs  tuf_tmpdir.rs
engine/tests/: advisory_nvd_parse.rs  dashboard_guards.rs  dashboard_web_guards.rs  file_size_guard.rs
engine/tests/fixtures/: advisory_nvd_recent_sample.json
engine/web/: build.mjs  entry.mjs  eslint.config.js  jsconfig.json  package-lock.json  package.json  vitest.config.js
engine/web/src/: app.jsx  keys.js  main.jsx  poll.js  reconcile.js  shell.jsx  store.js  strip.jsx
engine/web/src/access/: view.jsx
engine/web/src/action/: judgement.jsx  view.jsx
engine/web/src/admission/: decisions.jsx  signing.jsx  signing_detail.jsx  signing_glyphs.js  view.jsx
engine/web/src/alerts/: view.jsx
engine/web/src/findings/: detail.jsx  empty.jsx  evidence.jsx  glyphs.js  row.jsx  table.jsx
engine/web/src/readiness/: nodes.jsx  view.jsx
engine/web/test/: a11y-routes.test.jsx  access.test.jsx  action.test.jsx  admission.test.jsx  alerts.test.jsx  app-refetch.test.jsx  app-status.test.jsx  app.test.jsx  auth-gate.test.jsx  blind-caveat.test.jsx  escaping.test.jsx  fixtures.js  honesty.test.jsx  poll.test.js  readiness.test.jsx  reconcile.test.js  state-preservation.test.jsx  store.test.js  strip.test.jsx  transitional-states.test.jsx
(+188 files in other folders)
