# Virtual workspace root. The engine (and, from Stage B, the shared `behavior` crate it
# and the agent both use) build on STABLE here. The agent is a SEPARATE workspace under
# `agent/` — its eBPF crate needs nightly + the bpf target, which must never reach the
# engine's build, so it is deliberately not a member here (it depends on `behavior` by
# path instead).
[workspace]
resolver = "2"
members = ["engine"]
