[package]
name = "protector-agent"
version = "0.1.0"
edition = "2024"
description = "protector's first-party eBPF behavioral collector — the default provider for the behavioral-evidence port (ADR-0014). Userspace half: loads the eBPF programs, resolves cgroup→pod, and POSTs normalized observations to the engine's /behavior ingest."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# The behavioral wire types, shared with the engine so the two can't drift (ADR-0014).
protector-behavior = { path = "../../behavior" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The eBPF loader + the shared repr(C) event layouts. Feature-gated so the default build
# (and its unit tests) compile without the bpf toolchain; enable `--features ebpf` on a
# node to load real probes.
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }
protector-agent-common = { path = "../common", optional = true }

[features]
default = []
ebpf = ["dep:aya", "dep:aya-log", "dep:protector-agent-common"]
